[workspace]
members = [
  "the-rust-programming-language/01-getting-started",
  "the-rust-programming-language/02-programming-a-guessing-game",
  "the-rust-programming-language/03-common-programming-concepts",
  "the-rust-programming-language/04-understanding-ownership",
  "the-rust-programming-language/05-using-structs-to-structure-related-data",
  "the-rust-programming-language/06-enums-and-pattern-matching",
  "the-rust-programming-language/07-managing-growing-projects-with-packages-crates-and-modules",
  "the-rust-programming-language/08-common-collections",
  "the-rust-programming-language/09-error-handling",
  "the-rust-programming-language/10-generic-types-traits-and-lifetimes",
  "the-rust-programming-language/11-writing-automated-tests",
  "the-rust-programming-language/12-an-io-project-building-a-command-line-program",
  "the-rust-programming-language/13-functional-language-features-iterators-and-closures",
  "the-rust-programming-language/15-smart-pointers",
  "the-rust-programming-language/16-fearless-concurrency"
]
